--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
         <div class="row">
           <div class="col-md" class="img">
             <h2 style="text-align: center;">Escritório</h2>
-            <img src="Escritorio.jpeg" alt="">
+            <img src="img/Escritorio.jpeg" alt="">
           </div>
           <div class="col-md" class="img">
             <h2 style="text-align: center;">Mesa</h2>
-            <img src="mesa.jpeg" alt="">
+            <img src="img/mesa.jpeg" alt="">
           </div>
           <div class="col-md" class="img">
             <h2 style="text-align: center;">Cozinha</h2>
-            <img src="cozinha.jpeg" alt="">
+            <img src="img/cozinha.jpeg" alt="">
           </div>
         </div>
 
