--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
   </head>
 
   <body>
-
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a href="file:///C:/Users/Manoel%20Neto/OneDrive/%C3%81rea%20de%20Trabalho/SI/Primeiro%20Per%C3%ADodo/Design%20de%20Interface%20para%20Web/Projeto-1.2%20Estagio%201/index.html#"><img src="favicon.ico" alt="Stone"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
+    <div class="container-fluid header-stone">
+      <div class="row justify-content-md-center">
+        <img src="/img/logostone.png" class="logo" alt="Stone Mámore e Granito" >
+      </div>
+    </div>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -52,13 +51,37 @@
     <main role="main">
 
       <!-- Principal jumbotron, para a área de contato da empresa -->
-      <div class="jumbotron">
-        <div class="container">
-          <!--<img id="image" src="marmore-branco-com-fundo-cinza-textura_53876-63505.jpg" alt="">-->
-          <h1 class="display-2" style="text-align: center;"><b>STONE</b></h1>
-          <p style="text-align: center;">A solução para desenvolver o seu projeto dos sonhos!</p>
-          <p style="text-align: center;">Mão de obra especializada e anos de experiência no mercado para agregar valor ao seu ambiente.</p>
-          <p><a class="btn btn-primary btn-lg" href="https://api.whatsapp.com/send?1=pt_BR&phone=558332454086" target="_blank" role="button">Contato &raquo;</a></p>
+        <div class="container-fluid slide-area">
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100 slide-stone" src="/img/slides/slide_01.jpeg" alt="Stone Mámore e Granito Imagens">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 slide-stone" src="/img/slides/slide_02.jpeg" alt="Stone Mámore e Granito Imagens">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 slide-stone" src="/img/slides/slide_03.jpeg" alt="Stone Mámore e Granito Imagens">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 slide-stone" src="/img/slides/slide_04.jpeg" alt="Stone Mámore e Granito Imagens">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 slide-stone" src="/img/slides/slide_05.jpeg" alt="Stone Mámore e Granito Imagens">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 slide-stone" src="/img/slides/slide_06.jpeg" alt="Stone Mámore e Granito Imagens">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </div>
       </div>
 
@@ -77,7 +100,6 @@
             <h2 style="text-align: center;">Cozinha</h2>
             <img src="img/cozinha.jpeg" alt="">
           </div>
-        </div>
 
         <hr>
 
