--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container-fluid header-stone">
       <div class="row justify-content-md-center">
-        <img src="/img/logostone.png" class="logo" alt="Stone Mámore e Granito" >
+        <img src="img/logostone.png" class="logo" alt="Stone Mámore e Granito" >
       </div>
     </div>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
@@ -55,22 +55,22 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100 slide-stone" src="/img/slides/slide_01.jpeg" alt="Stone Mámore e Granito Imagens">
+                <img class="d-block w-100 slide-stone" src="img/slides/slide_01.jpeg" alt="Stone Mámore e Granito Imagens">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 slide-stone" src="/img/slides/slide_02.jpeg" alt="Stone Mámore e Granito Imagens">
+                <img class="d-block w-100 slide-stone" src="img/slides/slide_02.jpeg" alt="Stone Mámore e Granito Imagens">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 slide-stone" src="/img/slides/slide_03.jpeg" alt="Stone Mámore e Granito Imagens">
+                <img class="d-block w-100 slide-stone" src="img/slides/slide_03.jpeg" alt="Stone Mámore e Granito Imagens">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 slide-stone" src="/img/slides/slide_04.jpeg" alt="Stone Mámore e Granito Imagens">
+                <img class="d-block w-100 slide-stone" src="img/slides/slide_04.jpeg" alt="Stone Mámore e Granito Imagens">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 slide-stone" src="/img/slides/slide_05.jpeg" alt="Stone Mámore e Granito Imagens">
+                <img class="d-block w-100 slide-stone" src="img/slides/slide_05.jpeg" alt="Stone Mámore e Granito Imagens">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 slide-stone" src="/img/slides/slide_06.jpeg" alt="Stone Mámore e Granito Imagens">
+                <img class="d-block w-100 slide-stone" src="img/slides/slide_06.jpeg" alt="Stone Mámore e Granito Imagens">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
