--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Principal CSS do Bootstrap -->
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <!-- Estilos customizados para esse template -->
   </head>
 
@@ -25,26 +25,20 @@
       <div class="navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Início <span class="sr-only">(atual)</span></a>
+            <a class="nav-link" href="index.html">Início <span class="sr-only">(atual)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Materiais</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://api.whatsapp.com/send?1=pt_BR&phone=558332454086" target="_blank">Orçamento</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Redes Sociais</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="https://www.instagram.com/stonemg_/" target="_blank">Instagram</a>
-              <a class="dropdown-item" href="https://www.facebook.com/stonemarmoresegranitos" target="_blank">Facebook</a>
-              <a class="dropdown-item" href="https://api.whatsapp.com/send?1=pt_BR&phone=558332454086" target="_blank">WhatsAPP</a>
-            </div>
-          </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Pesquisa" aria-label="Search">
-        </form>
+        <ul class="navbar-nav">
+          <a href="https://www.instagram.com/stonemg_/" target="_blank"><li class="nav-item"><i class="bi bi-instagram"></i></li></a>
+          <a href="https://www.facebook.com/stonemarmoresegranitos" target="_blank"><li class="nav-item"><i class="bi bi-facebook"></i></li></a>
+          <a href="https://api.whatsapp.com/send?1=pt_BR&phone=558332454086" target="_blank"><li class="nav-item"><i class="bi bi-whatsapp"></i></li></a>
+        </ul>
       </div>
     </nav>
 
@@ -75,11 +69,11 @@
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
+              <span class="sr-only">Anterior</span>
             </a>
             <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
+              <span class="sr-only">Próximo</span>
             </a>
           </div>
         </div>
@@ -87,18 +81,33 @@
 
       <div class="container">
         <!-- Exemplo de linha de colunas -->
-        <div class="row">
+        <div class="row justify-content-md-center">
           <div class="col-md" class="img">
-            <h2 style="text-align: center;">Escritório</h2>
-            <img src="img/Escritorio.jpeg" alt="">
+            <div class="card" style="width: 100%;">
+              <i class="bi bi-bag-check"></i>
+              <div class="card-body">
+                <h5 class="card-title">Produtos de Alta Qualidade</h5>
+                <p class="card-text">Os materiais comercializados pela Alicante são criteriosamente selecionados com o objetivo de oferecer ao mercado a mais alta qualidade.</p>
+              </div>
+            </div>
           </div>
           <div class="col-md" class="img">
-            <h2 style="text-align: center;">Mesa</h2>
-            <img src="img/mesa.jpeg" alt="">
+            <div class="card" style="width: 100%;">
+              <i class="bi bi-globe"></i>
+              <div class="card-body">
+                <h5 class="card-title">Qualidade Importada</h5>
+                <p class="card-text">Importamos as matérias primas utilizadas em nossos projetos para atender os segmentos de arquitetura, construção e design.</p>
+              </div>
+            </div>
           </div>
           <div class="col-md" class="img">
-            <h2 style="text-align: center;">Cozinha</h2>
-            <img src="img/cozinha.jpeg" alt="">
+            <div class="card" style="width: 100%;">
+              <i class="bi bi-check2-square"></i>
+              <div class="card-body">
+                <h5 class="card-title">Projetos de Alto Padrão</h5>
+                <p class="card-text">Desenvolvemos projetos com alto padrão de sofisticação para elevar ainda mais o seu ambiente.</p>
+              </div>
+            </div>
           </div>
 
         <hr>
@@ -107,8 +116,17 @@
 
     </main>
 
-    <footer class="container">
-      <p>&copy; Stone M&G</p>
+    <footer class="container-fluid footer-site">
+      <div class="row justify-md-center">
+        <div class="col-md-8">
+          <p>&copy; Todos os direitos reservados à Stone M&G</p>
+        </div>
+        <div class="col-md-4">
+            <a href="https://www.instagram.com/stonemg_/" target="_blank" class="col-3"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.facebook.com/stonemarmoresegranitos" target="_blank" class="col-3"><i class="bi bi-facebook"></i></a>
+            <a href="https://api.whatsapp.com/send?1=pt_BR&phone=558332454086" target="_blank" class="col-3"><i class="bi bi-whatsapp"></i></a>
+        </div>
+      </div>
     </footer>
 
     <!-- Principal JavaScript do Bootstrap
